--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/main.css" />
-    <title>Document</title>
+    <title>Story-Play</title>
 </head>
 <body>
   <script type="module" src="/src/story.ts"></script>
