--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Story-Play</title>
 </head>
 <body>
+  <div style="width: 800px; height: 600px; overflow: hidden;">
+    <canvas id="game-canvas" width="800" height="600"></canvas>
+  </div>
   <script type="module" src="/src/story.ts"></script>
 </body>
 </html>
