--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
   </head>
   <body>
     <div id="phaser"></div>
+    <!-- Simple pop-up dialog box, containing a form -->
+    <dialog id="favDialog">
+      <form method="dialog">
+        <p>
+          <label for="favAnimal">Favorite animal:</label>
+          <select id="favAnimal" name="favAnimal">
+            <option></option>
+            <option>Brine shrimp</option>
+            <option>Red panda</option>
+            <option>Spider monkey</option>
+          </select>
+        </p>
+        <div>
+          <button id="cancel" type="reset">Cancel</button>
+          <button id="confirm" type="submit">Confirm</button>
+        </div>
+      </form>
+    </dialog>
+
     <script type="module" src="/src/story.ts"></script>
   </body>
 </html>
