--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <dialog id="favDialog">
       <form method="dialog">
         <p>
-          <label for="favAnimal">Favorite animal:</label>
-          <select id="favAnimal" name="favAnimal">
+          <label for="favLanguage">Game language:</label>
+          <select id="favLanguage" name="favLanguage">
             <option></option>
-            <option>Brine shrimp</option>
-            <option>Red panda</option>
-            <option>Spider monkey</option>
+            <option>English</option>
+            <option>German</option>
+            <option>Romanian</option>
           </select>
         </p>
         <div>
