--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="phaser"></div>
     <!-- Simple pop-up dialog box, containing a form -->
-    <dialog id="favDialog">
+    <dialog id="favDialog" style="display: none">
       <form method="dialog">
         <p>
           <label for="favLanguage">Game language:</label>
