A new/better way for setting the cursor as active

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Story-Play</title>
   </head>
   <body>
+    hello
     <div id="phaser"></div>
     <!-- Simple pop-up dialog box, containing a form -->
     <dialog id="favDialog" class="dialog-hidden">
